Updated intro page

--- a/introPage.html
+++ b/introPage.html
@@ -18,13 +18,18 @@
           <a href="./index.html" style="margin-left: 0px; color: #7777ff" target="_blank">Play the game</a>
         </h1>
         <p>
+          UPDATE 2020/03/05:
+          <ul>
+            <li>Uploaded the project to github (<a href="https://redtorch.github.io/CLI_RTS/introPage.html">link</a>). I'll be updating mainly on Github, so go there for the most recent version.</li>
+            <li>Minor file renaming, organization, etc.</li>
+          </ul>
           UPDATE 2020/02/07: 
           <ul>
             <li>"drone1 move drone3" is now possible (drone1 moves to the current coordinates of drone3).</li>
             <li>drones can now shoot hostiles within their weapon range.</li>
             <li>added visual indicators of current move target and weapon range.</li>
             <li>BUG: the page slows down severely sometime around the 1:00:00 mark. still figuring that out.</li>
-            <li>BUG: on some clients (e.g. mine) the intro page is updated but the game page isn't. try incognito.</li>
+            <li>BUG: game page isn't updating on the web.sfc.keio.ac.jp server, so none of the above features have been uploaded and there's nothing I can do about it >:( CORRECTION: my bad, this is actually a client-specific issue. using incognito mode should fix it.</li>
           </ul>
         </p>
         <p>
